# java-oxide-gen

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  test.bat  test.sh
gen-test/: Cargo.toml  java-oxide.toml
gen-test/src/: empty.rs  temp.rs
java-oxide/: Cargo.toml
java-oxide-gen/: Cargo.toml
java-oxide-gen/src/: cli.rs  config.rs  main.rs  setup.rs
java-oxide-gen/src/emit/: class_proxy.rs  classes.rs  fields.rs  java_proxy.rs  known_docs_url.rs  methods.rs  mod.rs  modules.rs
java-oxide-gen/src/identifiers/: field_mangling.rs  method_mangling.rs
java-oxide-gen/src/parser_util/: class.rs  field.rs  method.rs
java-oxide-gen/src/util/: difference.rs  generated_file.rs  mod.rs
java-oxide/src/: array.rs  as_arg.rs  as_jvalue.rs  env.rs  jni_type.rs  lib.rs  string_chars.rs  vm.rs
java-oxide/src/refs/: arg.rs  global.rs  local.rs  ref_.rs  return_.rs
src/: config.rs  config_new.rs  macros.rs  main.rs
src/emit/: class_proxy.rs  classes.rs  fields.rs  java_proxy.rs  known_docs_url.rs  methods.rs  mod.rs  modules.rs  preamble.rs
src/identifiers/: rust_identifier.rs
src/parser_util/: id.rs
src/util/: difference.rs  generated_file.rs  mod.rs
