[package]
name = "java-oxide-gen"
description = "Code generator for binding to JVM APIs from Rust"
version = "0.1.0"
edition = "2024"
authors = ["PitchBlackNights <pitchblacknights@proton.me>"]
repository = "https://github.com/OxidizeMC/java-oxide-gen"
keywords = ["jvm", "jni", "bindgen"]
categories = ["development-tools::ffi"]
license = "MIT"
readme = "README.md"

[dependencies]
cafebabe = "0.9.0"
clap = { version = "4.5.52", features = ["derive", "cargo"] }
bitflags = "2.8.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
zip = "6.0.0"
quote = "1.0.42"
proc-macro2 = "1.0.103"
anyhow = "1.0.100"
glob = "0.3.3"
env_logger = "0.11.8"
log = "0.4.28"
colored = "3.0.0"
chrono = "0.4.42"
soft-canonicalize = "0.5.2"
# const_format = { version = "0.2.35", features = ["fmt"] }

[dev-dependencies]
jni-sys  = "0.4.0"

[build-dependencies]
vergen-git2 = { version = "1.0.7", features = ["build", "cargo", "rustc", "si", "emit_and_set"]}
